--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>mudamaop</title>
-        <link rel="stylesheet" types="text/css" href="styledomundo.css">
+        <link rel="stylesheet" types="text/css"ssssr="styleoundo.css">
     </head>
     <body>
         <ul>
@@ -20,11 +20,11 @@
                     <li>
                         <h1>
                            <div class="inf"><li>1°informatica</li></div>
-                           <div class="edf"><li>1°edificações</li></div> 
+                           <div class="edf"><li>1°edificações</li></div >   uug 
                            <div class="enf"><li>1°enfermagem</li></div> 
-                           <div class="adm"><li>1°administração</li></div> 
-                        </h1>
-                    </li>
+                           <div class="adm"><li>1°administração</li></div>j 
+                        </h1>n
+                  kabch  </li>
                 </ul>
                     <br>
 
