--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li>
                                 <h1>
                                    <div class="inf"><li>1°informatica</li></div> 
-                                   <div class="edf"><li>1°edificações</li></div> 
+                                    <div class="edf"><li>2 ° informática</li></div>
                                    <div class="enf"><li>1°enfermagem</li></div> 
                                    <div class="adm"><li>1°administração</li></div> 
                                 </h1>
